--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.0.0
   uuid: ^4.0.0
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
